dnl                                                  dnl
dnl Written by Dominik Seichter <domseichter@web.de> dnl
dnl                                                  dnl

AC_INIT(podofo, 0.2, domseichter@web.de )
AM_INIT_AUTOMAKE([ -Wall -Werror ]) dnl
AC_PROG_LIBTOOL

dnl Enable profiling, optimization level 2 and full debugging support
CXXFLAGS="-pg -O2 -g3 -Wall"

AC_PROG_CXX
AC_HAVE_HEADERS(string.h stdio.h)

dnl checking for required libraries
AC_CHECK_LIB(z, deflate,, ZLIBMISSING=true)
AC_CHECK_LIB(jpeg, jpeg_write_raw_data,, JPEGLIBMISSING=true)

AC_CHECK_HEADERS(zlib.h jpeglib.h)

AC_OUTPUT( [Makefile src/Makefile test/Makefile test/FilterTest/Makefile test/ObjectParserTest/Makefile test/ParserTest/Makefile test/VariantTest/Makefile test/CreationTest/Makefile tools/Makefile tools/podofoimgextract/Makefile tools/podofouncompress/Makefile tools/podofotxt2pdf/Makefile tools/podofopdfinfo/Makefile ] )

