ADD_EXECUTABLE(pdfcontentsgraph PdfContentsGraph.cpp main.cpp)

TARGET_LINK_LIBRARIES(pdfcontentsgraph ${PODOFO_LIB})
SET_TARGET_PROPERTIES(pdfcontentsgraph PROPERTIES COMPILE_FLAGS "${PODOFO_CFLAGS}")
ADD_DEPENDENCIES(pdfcontentsgraph ${PODOFO_DEPEND_TARGET})
INCLUDE_DIRECTORIES(${PoDoFo_SOURCE_DIR})
